# skills

./: .gitignore  AGENTS.md  Dockerfile  LICENSE  README.md  USAGE.md  install.ps1  install.py  install.sh  pyproject.toml  skill_categories.py  skill_validate.py
add-mcp-server/: SKILL.md  examples.md  reference.md
browser-test/: SKILL.md  examples.md
caveman/: SKILL.md  examples.md
ci-debug/: SKILL.md  examples.md
ci-optimize/: SKILL.md  examples.md
cloud-init/: SKILL.md  examples.md
codebase-memory/: SKILL.md  examples.md  reference.md
compiled-performance/: SKILL.md  checklist.md  examples.md
compose-deploy/: SKILL.md  examples.md
daily-plan/: SKILL.md  examples.md
dependabot-merge/: SKILL.md  examples.md
docker/: SKILL.md
docker-optimize/: SKILL.md  checklist.md  examples.md
docs/: architecture.md  getting-started.md  index.md
document-project/: SKILL.md
document-screenshots/: SKILL.md  examples.md
experimental-warning/: SKILL.md  checklist.md  examples.md
explain-codebase/: SKILL.md
github-issues/: SKILL.md  examples.md
github-merge-all/: SKILL.md  examples.md
github-prune-branches/: SKILL.md  examples.md
github-publish/: SKILL.md  examples.md
github-release/: SKILL.md  examples.md
github-workflows/: SKILL.md  examples.md
gmail-daily-plan/: SKILL.md  examples.md
hardware-metrics/: SKILL.md  checklist.md  examples.md
hardware-requirements/: SKILL.md  examples.md
headroom/: SKILL.md  examples.md
interpreted-performance/: SKILL.md  checklist.md  examples.md
jira-daily-plan/: SKILL.md  examples.md
lint/: SKILL.md  (+1 more)
(+62 files in other folders)
