[project]
name = "skills-installer"
version = "0.0.0"
requires-python = ">=3.10"
description = "Cross-platform installer for Cursor Agent Skills"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "--cov=install --cov-report=term-missing --cov-fail-under=100"

[tool.coverage.run]
source = ["install.py"]
omit = []

[tool.coverage.report]
fail_under = 100
show_missing = true

[tool.ruff]
target-version = "py310"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "S"]
ignore = ["S603", "S607"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101", "S108"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.8",
]
